--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Немой умный робот с памятью</title>
-
+<title>Немой умный робот</title>
 <style>
 body {
   margin: 0;
@@ -70,6 +69,15 @@ body {
   word-wrap: break-word;
 }
 
+/* Лицо */
+#face {
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+}
+
 /* Кнопка */
 #listen {
   position: absolute;
@@ -82,6 +90,16 @@ body {
   border: none;
   cursor: pointer;
 }
+
+/* Сцена */
+#scene {
+  display: none;
+  width: 150px;
+  position: absolute;
+  top: -150px;
+  left: 50%;
+  transform: translateX(-50%);
+}
 </style>
 </head>
 <body>
@@ -93,7 +111,10 @@ body {
   <div class="arm left"></div>
   <div class="arm right"></div>
 
+  <img id="face" src="https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png" alt="Face">
+
   <div id="card"></div>
+  <img id="scene" src="" alt="Scene">
 
   <button id="listen">🎤</button>
 </div>
@@ -103,6 +124,8 @@ const card = document.getElementById("card");
 const leftArm = document.querySelector(".arm.left");
 const rightArm = document.querySelector(".arm.right");
 const eyes = document.querySelectorAll(".eye");
+const face = document.getElementById("face");
+const scene = document.getElementById("scene");
 
 /* Память робота */
 let memory = JSON.parse(localStorage.getItem("robotMemory") || "[]");
@@ -149,53 +172,74 @@ function resetPose() {
 
 function thinkAnimation() {
   eyes.forEach(e => e.style.transform = "scale(0.6)");
-  setTimeout(() => {
-    eyes.forEach(e => e.style.transform = "scale(1)");
-  }, 800);
+  setTimeout(() => eyes.forEach(e => e.style.transform = "scale(1)"), 800);
+}
+
+/* Меняем лицо */
+function changeFace(emotion) {
+  const faces = {
+    happy: "https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png",
+    sad: "https://i.pinimg.com/originals/35/33/13/35331317b10e6a8fa44c6f8655b36b18.png",
+    surprised: "https://i.pinimg.com/originals/25/4b/ab/254bab80e51f6f450d7c6d3f5f95c456.png"
+  };
+  face.src = faces[emotion] || faces.happy;
+}
+
+/* Показ сцены */
+function showScene(name, time = 3000) {
+  scene.src = name;
+  scene.style.display = "block";
+  setTimeout(() => scene.style.display = "none", time);
 }
 
 /* МОЗГ */
 function brain(text) {
-
   // Проверяем память
   for (let i = 0; i < memory.length; i++) {
     if (text.includes(memory[i].question)) {
+      if(memory[i].scene) showScene(memory[i].scene);
+      if(memory[i].emotion) changeFace(memory[i].emotion);
       return showCard(memory[i].answer);
     }
   }
 
+  let emotion = "happy";
+
   // МАТЕМАТИКА
   if (text.match(/\d+/g)) {
     let nums = text.match(/\d+/g).map(Number);
-    if (text.includes("плюс")) return memorize(text, nums[0] + nums[1]);
-    if (text.includes("минус")) return memorize(text, nums[0] - nums[1]);
-    if (text.includes("умнож")) return memorize(text, nums[0] * nums[1]);
-    if (text.includes("дел")) return memorize(text, nums[0] / nums[1]);
+    if (text.includes("плюс")) return memorize(text, nums[0]+nums[1], emotion);
+    if (text.includes("минус")) return memorize(text, nums[0]-nums[1], emotion);
+    if (text.includes("умнож")) return memorize(text, nums[0]*nums[1], emotion);
+    if (text.includes("дел")) return memorize(text, nums[0]/nums[1], emotion);
   }
 
   // ВРЕМЯ
-  if (text.includes("время")) {
-    let t = new Date().toLocaleTimeString().slice(0,5);
-    return memorize(text, t);
-  }
+  if (text.includes("время")) return memorize(text, new Date().toLocaleTimeString().slice(0,5), emotion);
 
   // ЭМОЦИИ
-  if (text.includes("привет")) return memorize(text, "👋");
-  if (text.includes("люб")) return memorize(text, "💖");
-  if (text.includes("груст")) return memorize(text, "😔");
-  if (text.includes("счаст")) return memorize(text, "😊");
+  if (text.includes("привет")) { emotion="happy"; return memorize(text,"👋",emotion); }
+  if (text.includes("люб")) { emotion="happy"; return memorize(text,"💖",emotion); }
+  if (text.includes("груст")) { emotion="sad"; return memorize(text,"😔",emotion); }
+  if (text.includes("счаст")) { emotion="happy"; return memorize(text,"😊",emotion); }
 
   // ВОПРОСЫ О СМЫСЛЕ
-  if (text.includes("что такое")) return memorize(text, "💡");
+  if (text.includes("что такое")) { emotion="surprised"; return memorize(text,"💡",emotion); }
+
+  // СЦЕНЫ
+  if (text.includes("дождь")) { showScene("https://i.pinimg.com/originals/15/67/9e/15679e6f50c8b6c1f607fe7c8f7f6a1b.png"); emotion="surprised"; return memorize(text,"☔",emotion); }
+  if (text.includes("солнце")) { showScene("https://i.pinimg.com/originals/27/11/3a/27113a8e74f2e6b8d9bcd25f68e2d8c0.png"); emotion="happy"; return memorize(text,"☀️",emotion); }
 
   // ЕСЛИ НЕ ПОНЯЛ
-  memorize(text, "❓");
+  emotion="surprised";
+  memorize(text,"❓",emotion);
 }
 
-/* Функция добавления в память */
-function memorize(question, answer) {
-  memory.push({question, answer});
+/* Память */
+function memorize(question, answer, emotion) {
+  memory.push({question, answer, emotion});
   localStorage.setItem("robotMemory", JSON.stringify(memory));
+  changeFace(emotion);
   return showCard(answer);
 }
 </script>
