--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Немой умный робот</title>
+<title>Немой умный робот с карточками</title>
 <style>
 body {
   margin: 0;
@@ -54,7 +54,7 @@ body {
 /* Картонка */
 #card {
   position: absolute;
-  top: -130px;
+  top: -150px;
   left: 50%;
   transform: translateX(-50%);
   background: #d2b48c;
@@ -96,9 +96,24 @@ body {
   display: none;
   width: 150px;
   position: absolute;
-  top: -150px;
+  top: -200px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+/* Карточки чисел */
+.number-card {
+  position: absolute;
+  top: -220px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  color: #000;
+  font-size: 32px;
+  padding: 20px 30px;
+  border-radius: 12px;
+  display: none;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
 }
 </style>
 </head>
@@ -115,32 +130,30 @@ body {
 
   <div id="card"></div>
   <img id="scene" src="" alt="Scene">
+  <div id="numberCard" class="number-card"></div>
 
   <button id="listen">🎤</button>
 </div>
 
 <script>
 const card = document.getElementById("card");
+const numberCard = document.getElementById("numberCard");
 const leftArm = document.querySelector(".arm.left");
 const rightArm = document.querySelector(".arm.right");
 const eyes = document.querySelectorAll(".eye");
 const face = document.getElementById("face");
 const scene = document.getElementById("scene");
 
-/* Память робота */
+/* Память */
 let memory = JSON.parse(localStorage.getItem("robotMemory") || "[]");
 
 /* СЛУХ */
-const SpeechRecognition =
-  window.SpeechRecognition || window.webkitSpeechRecognition;
+const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 const rec = new SpeechRecognition();
 rec.lang = "ru-RU";
 
 /* КНОПКА */
-document.getElementById("listen").onclick = () => {
-  thinkAnimation();
-  rec.start();
-};
+document.getElementById("listen").onclick = () => { thinkAnimation(); rec.start(); };
 
 /* РАСПОЗНАВАНИЕ */
 rec.onresult = e => {
@@ -150,32 +163,11 @@ rec.onresult = e => {
 };
 
 /* ВИЗУАЛ */
-function showCard(text, time = 3000) {
-  card.innerText = text;
-  card.style.display = "block";
-  raiseHands();
-  setTimeout(() => {
-    card.style.display = "none";
-    resetPose();
-  }, time);
-}
-
-function raiseHands() {
-  leftArm.style.transform = "rotate(-60deg)";
-  rightArm.style.transform = "rotate(60deg)";
-}
-
-function resetPose() {
-  leftArm.style.transform = "rotate(0deg)";
-  rightArm.style.transform = "rotate(0deg)";
-}
-
-function thinkAnimation() {
-  eyes.forEach(e => e.style.transform = "scale(0.6)");
-  setTimeout(() => eyes.forEach(e => e.style.transform = "scale(1)"), 800);
-}
-
-/* Меняем лицо */
+function showCard(text, time=3000) { card.innerText=text; card.style.display="block"; raiseHands(); setTimeout(()=>card.style.display="none",time); }
+function showNumberCard(text, time=3000) { numberCard.innerText=text; numberCard.style.display="block"; raiseHands(); setTimeout(()=>numberCard.style.display="none",time); }
+function raiseHands() { leftArm.style.transform="rotate(-60deg)"; rightArm.style.transform="rotate(60deg)"; }
+function resetPose() { leftArm.style.transform="rotate(0deg)"; rightArm.style.transform="rotate(0deg)"; }
+function thinkAnimation() { eyes.forEach(e=>e.style.transform="scale(0.6)"); setTimeout(()=>eyes.forEach(e=>e.style.transform="scale(1)"),800); }
 function changeFace(emotion) {
   const faces = {
     happy: "https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png",
@@ -184,62 +176,57 @@ function changeFace(emotion) {
   };
   face.src = faces[emotion] || faces.happy;
 }
-
-/* Показ сцены */
-function showScene(name, time = 3000) {
-  scene.src = name;
-  scene.style.display = "block";
-  setTimeout(() => scene.style.display = "none", time);
-}
+function showScene(name, time=3000){ scene.src=name; scene.style.display="block"; setTimeout(()=>scene.style.display="none",time); }
 
 /* МОЗГ */
-function brain(text) {
+function brain(text){
   // Проверяем память
-  for (let i = 0; i < memory.length; i++) {
-    if (text.includes(memory[i].question)) {
+  for(let i=0;i<memory.length;i++){
+    if(text.includes(memory[i].question)){
       if(memory[i].scene) showScene(memory[i].scene);
       if(memory[i].emotion) changeFace(memory[i].emotion);
+      if(memory[i].number) return showNumberCard(memory[i].number);
       return showCard(memory[i].answer);
     }
   }
 
-  let emotion = "happy";
+  let emotion="happy";
 
   // МАТЕМАТИКА
-  if (text.match(/\d+/g)) {
-    let nums = text.match(/\d+/g).map(Number);
-    if (text.includes("плюс")) return memorize(text, nums[0]+nums[1], emotion);
-    if (text.includes("минус")) return memorize(text, nums[0]-nums[1], emotion);
-    if (text.includes("умнож")) return memorize(text, nums[0]*nums[1], emotion);
-    if (text.includes("дел")) return memorize(text, nums[0]/nums[1], emotion);
+  if(text.match(/\d+/g)){
+    let nums=text.match(/\d+/g).map(Number);
+    if(text.includes("плюс")) return memorize(text, nums[0]+nums[1], emotion, nums[0]+"+"+nums[1]+"="+(nums[0]+nums[1]));
+    if(text.includes("минус")) return memorize(text, nums[0]-nums[1], emotion, nums[0]+"-"+nums[1]+"="+(nums[0]-nums[1]));
+    if(text.includes("умнож")) return memorize(text, nums[0]*nums[1], emotion, nums[0]+"*"+nums[1]+"="+(nums[0]*nums[1]));
+    if(text.includes("дел")) return memorize(text, nums[0]/nums[1], emotion, nums[0]+"/"+nums[1]+"="+(nums[0]/nums[1]));
   }
 
   // ВРЕМЯ
-  if (text.includes("время")) return memorize(text, new Date().toLocaleTimeString().slice(0,5), emotion);
+  if(text.includes("время")) return memorize(text,new Date().toLocaleTimeString().slice(0,5),emotion);
 
   // ЭМОЦИИ
-  if (text.includes("привет")) { emotion="happy"; return memorize(text,"👋",emotion); }
-  if (text.includes("люб")) { emotion="happy"; return memorize(text,"💖",emotion); }
-  if (text.includes("груст")) { emotion="sad"; return memorize(text,"😔",emotion); }
-  if (text.includes("счаст")) { emotion="happy"; return memorize(text,"😊",emotion); }
+  if(text.includes("привет")) { emotion="happy"; return memorize(text,"👋",emotion); }
+  if(text.includes("люб")) { emotion="happy"; return memorize(text,"💖",emotion); }
+  if(text.includes("груст")) { emotion="sad"; return memorize(text,"😔",emotion); }
+  if(text.includes("счаст")) { emotion="happy"; return memorize(text,"😊",emotion); }
 
   // ВОПРОСЫ О СМЫСЛЕ
-  if (text.includes("что такое")) { emotion="surprised"; return memorize(text,"💡",emotion); }
+  if(text.includes("что такое")) { emotion="surprised"; return memorize(text,"💡",emotion); }
 
   // СЦЕНЫ
-  if (text.includes("дождь")) { showScene("https://i.pinimg.com/originals/15/67/9e/15679e6f50c8b6c1f607fe7c8f7f6a1b.png"); emotion="surprised"; return memorize(text,"☔",emotion); }
-  if (text.includes("солнце")) { showScene("https://i.pinimg.com/originals/27/11/3a/27113a8e74f2e6b8d9bcd25f68e2d8c0.png"); emotion="happy"; return memorize(text,"☀️",emotion); }
+  if(text.includes("дождь")) { showScene("https://i.pinimg.com/originals/15/67/9e/15679e6f50c8b6c1f607fe7c8f7f6a1b.png"); emotion="surprised"; return memorize(text,"☔",emotion); }
+  if(text.includes("солнце")) { showScene("https://i.pinimg.com/originals/27/11/3a/27113a8e74f2e6b8d9bcd25f68e2d8c0.png"); emotion="happy"; return memorize(text,"☀️",emotion); }
 
-  // ЕСЛИ НЕ ПОНЯЛ
   emotion="surprised";
   memorize(text,"❓",emotion);
 }
 
 /* Память */
-function memorize(question, answer, emotion) {
-  memory.push({question, answer, emotion});
-  localStorage.setItem("robotMemory", JSON.stringify(memory));
+function memorize(question, answer, emotion, number){
+  memory.push({question, answer, emotion, number});
+  localStorage.setItem("robotMemory",JSON.stringify(memory));
   changeFace(emotion);
+  if(number) return showNumberCard(number);
   return showCard(answer);
 }
 </script>
