--- a/index.html
+++ b/index.html
@@ -1,235 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Немой умный робот с карточками</title>
-<style>
-body {
-  margin: 0;
-  background: radial-gradient(#222, #000);
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial, sans-serif;
-}
-
-/* Робот */
-#robot {
-  width: 220px;
-  height: 320px;
-  background: #444;
-  border-radius: 30px;
-  position: relative;
-  box-shadow: 0 0 30px rgba(0,0,0,0.7);
-}
-
-/* Глаза */
-.eye {
-  width: 22px;
-  height: 22px;
-  background: white;
-  border-radius: 50%;
-  position: absolute;
-  top: 70px;
-  transition: all 0.3s;
-}
-.eye.left { left: 60px; }
-.eye.right { right: 60px; }
-
-/* Руки */
-.arm {
-  width: 20px;
-  height: 100px;
-  background: #555;
-  position: absolute;
-  top: 140px;
-  border-radius: 10px;
-  transition: transform 0.5s;
-}
-.arm.left { left: -15px; transform-origin: top right; }
-.arm.right { right: -15px; transform-origin: top left; }
-
-/* Картонка */
-#card {
-  position: absolute;
-  top: -150px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #d2b48c;
-  padding: 18px 26px;
-  border-radius: 12px;
-  font-size: 28px;
-  font-weight: bold;
-  display: none;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.4);
-  text-align: center;
-  max-width: 180px;
-  word-wrap: break-word;
-}
-
-/* Лицо */
-#face {
-  position: absolute;
-  top: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50px;
-}
-
-/* Кнопка */
-#listen {
-  position: absolute;
-  bottom: -70px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 12px 22px;
-  font-size: 16px;
-  border-radius: 12px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Сцена */
-#scene {
-  display: none;
-  width: 150px;
-  position: absolute;
-  top: -200px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-/* Карточки чисел */
-.number-card {
-  position: absolute;
-  top: -220px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #fff;
-  color: #000;
-  font-size: 32px;
-  padding: 20px 30px;
-  border-radius: 12px;
-  display: none;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Мини робот</title>
+  <!-- Подключение стилей -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="robot">
-  <div class="eye left"></div>
-  <div class="eye right"></div>
+  <!-- Контейнер робота -->
+  <div id="robot">
+    <!-- Лицо -->
+    <img id="face" src="https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png" alt="лицо робота">
 
-  <div class="arm left"></div>
-  <div class="arm right"></div>
+    <!-- Глаза -->
+    <div class="eye left"></div>
+    <div class="eye right"></div>
 
-  <img id="face" src="https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png" alt="Face">
+    <!-- Руки -->
+    <div class="arm left"></div>
+    <div class="arm right"></div>
 
-  <div id="card"></div>
-  <img id="scene" src="" alt="Scene">
-  <div id="numberCard" class="number-card"></div>
+    <!-- Картонка для текста -->
+    <div id="card"></div>
 
-  <button id="listen">🎤</button>
-</div>
+    <!-- Сцена -->
+    <img id="scene" src="" alt="сцена">
+  </div>
 
-<script>
-const card = document.getElementById("card");
-const numberCard = document.getElementById("numberCard");
-const leftArm = document.querySelector(".arm.left");
-const rightArm = document.querySelector(".arm.right");
-const eyes = document.querySelectorAll(".eye");
-const face = document.getElementById("face");
-const scene = document.getElementById("scene");
+  <!-- Кнопка микрофона -->
+  <button id="listen">🎤 Говорить</button>
 
-/* Память */
-let memory = JSON.parse(localStorage.getItem("robotMemory") || "[]");
-
-/* СЛУХ */
-const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-const rec = new SpeechRecognition();
-rec.lang = "ru-RU";
-
-/* КНОПКА */
-document.getElementById("listen").onclick = () => { thinkAnimation(); rec.start(); };
-
-/* РАСПОЗНАВАНИЕ */
-rec.onresult = e => {
-  const text = e.results[0][0].transcript.toLowerCase();
-  console.log("Услышал:", text);
-  brain(text);
-};
-
-/* ВИЗУАЛ */
-function showCard(text, time=3000) { card.innerText=text; card.style.display="block"; raiseHands(); setTimeout(()=>card.style.display="none",time); }
-function showNumberCard(text, time=3000) { numberCard.innerText=text; numberCard.style.display="block"; raiseHands(); setTimeout(()=>numberCard.style.display="none",time); }
-function raiseHands() { leftArm.style.transform="rotate(-60deg)"; rightArm.style.transform="rotate(60deg)"; }
-function resetPose() { leftArm.style.transform="rotate(0deg)"; rightArm.style.transform="rotate(0deg)"; }
-function thinkAnimation() { eyes.forEach(e=>e.style.transform="scale(0.6)"); setTimeout(()=>eyes.forEach(e=>e.style.transform="scale(1)"),800); }
-function changeFace(emotion) {
-  const faces = {
-    happy: "https://i.pinimg.com/originals/4c/10/2e/4c102e2fdd68d3f2ad515a7ef44a9c8b.png",
-    sad: "https://i.pinimg.com/originals/35/33/13/35331317b10e6a8fa44c6f8655b36b18.png",
-    surprised: "https://i.pinimg.com/originals/25/4b/ab/254bab80e51f6f450d7c6d3f5f95c456.png"
-  };
-  face.src = faces[emotion] || faces.happy;
-}
-function showScene(name, time=3000){ scene.src=name; scene.style.display="block"; setTimeout(()=>scene.style.display="none",time); }
-
-/* МОЗГ */
-function brain(text){
-  // Проверяем память
-  for(let i=0;i<memory.length;i++){
-    if(text.includes(memory[i].question)){
-      if(memory[i].scene) showScene(memory[i].scene);
-      if(memory[i].emotion) changeFace(memory[i].emotion);
-      if(memory[i].number) return showNumberCard(memory[i].number);
-      return showCard(memory[i].answer);
-    }
-  }
-
-  let emotion="happy";
-
-  // МАТЕМАТИКА
-  if(text.match(/\d+/g)){
-    let nums=text.match(/\d+/g).map(Number);
-    if(text.includes("плюс")) return memorize(text, nums[0]+nums[1], emotion, nums[0]+"+"+nums[1]+"="+(nums[0]+nums[1]));
-    if(text.includes("минус")) return memorize(text, nums[0]-nums[1], emotion, nums[0]+"-"+nums[1]+"="+(nums[0]-nums[1]));
-    if(text.includes("умнож")) return memorize(text, nums[0]*nums[1], emotion, nums[0]+"*"+nums[1]+"="+(nums[0]*nums[1]));
-    if(text.includes("дел")) return memorize(text, nums[0]/nums[1], emotion, nums[0]+"/"+nums[1]+"="+(nums[0]/nums[1]));
-  }
-
-  // ВРЕМЯ
-  if(text.includes("время")) return memorize(text,new Date().toLocaleTimeString().slice(0,5),emotion);
-
-  // ЭМОЦИИ
-  if(text.includes("привет")) { emotion="happy"; return memorize(text,"👋",emotion); }
-  if(text.includes("люб")) { emotion="happy"; return memorize(text,"💖",emotion); }
-  if(text.includes("груст")) { emotion="sad"; return memorize(text,"😔",emotion); }
-  if(text.includes("счаст")) { emotion="happy"; return memorize(text,"😊",emotion); }
-
-  // ВОПРОСЫ О СМЫСЛЕ
-  if(text.includes("что такое")) { emotion="surprised"; return memorize(text,"💡",emotion); }
-
-  // СЦЕНЫ
-  if(text.includes("дождь")) { showScene("https://i.pinimg.com/originals/15/67/9e/15679e6f50c8b6c1f607fe7c8f7f6a1b.png"); emotion="surprised"; return memorize(text,"☔",emotion); }
-  if(text.includes("солнце")) { showScene("https://i.pinimg.com/originals/27/11/3a/27113a8e74f2e6b8d9bcd25f68e2d8c0.png"); emotion="happy"; return memorize(text,"☀️",emotion); }
-
-  emotion="surprised";
-  memorize(text,"❓",emotion);
-}
-
-/* Память */
-function memorize(question, answer, emotion, number){
-  memory.push({question, answer, emotion, number});
-  localStorage.setItem("robotMemory",JSON.stringify(memory));
-  changeFace(emotion);
-  if(number) return showNumberCard(number);
-  return showCard(answer);
-}
-</script>
-
+  <!-- Подключение скрипта -->
+  <script src="script.js" defer></script>
 </body>
 </html>
