--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <div id="robot">
   <div id="face">
+    <div class="cheek left"></div>
+    <div class="cheek right"></div>
     <div class="eye left"></div>
     <div class="eye right"></div>
     <div class="smile"></div>
   </div>
   <div class="arm left"></div>
   <div class="arm right"></div>
-  <div id="card">Привет! Я твой милый робот 🤖</div>
+  <div id="card"></div>
   <button id="speakBtn">Сказать что-то</button>
 </div>
 
