--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Супер Милый Робот</title>
+<title>Милый Робот с Ответами</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,8 @@
   <div class="arm left"></div>
   <div class="arm right"></div>
   <div id="card"></div>
-  <button id="speakBtn">Сказать что-то</button>
+  <input type="text" id="questionInput" placeholder="Спроси меня что-нибудь">
+  <button id="askBtn">Спросить</button>
 </div>
 
 <script src="script.js"></script>
