--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Милый Робот с Ответами</title>
+<title>Голосовой Милый Робот</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div id="robot">
   <div id="face">
-    <div class="cheek left"></div>
-    <div class="cheek right"></div>
     <div class="eye left"></div>
     <div class="eye right"></div>
     <div class="smile"></div>
   </div>
+
   <div class="arm left"></div>
   <div class="arm right"></div>
-  <div id="card"></div>
-  <input type="text" id="questionInput" placeholder="Спроси меня что-нибудь">
-  <button id="askBtn">Спросить</button>
+
+  <div id="card">Нажми на микрофон и скажи что-нибудь 🎤</div>
+
+  <button id="micBtn">🎤 Говорить</button>
 </div>
 
 <script src="script.js"></script>
