--- a/index.html
+++ b/index.html
@@ -3,30 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ИИ Робот-Друг</title>
+  <title>Робот-друг</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="robot">
-    <!-- Голова -->
-    <div id="face">
-      <div class="eye left"></div>
-      <div class="eye right"></div>
-      <div class="smile"></div>
-    </div>
-
-    <!-- Руки -->
-    <div class="arm left"></div>
-    <div class="arm right"></div>
-
-    <!-- Табличка -->
-    <div id="card">Нажми микрофон и скажи что-нибудь</div>
-
-    <!-- Кнопка микрофона -->
-    <button id="micBtn">🎤 Говорю</button>
+<div id="robot">
+  <div id="face">
+    <div class="eye left"></div>
+    <div class="eye right"></div>
+    <div class="smile"></div>
   </div>
+  <div class="arm left"></div>
+  <div class="arm right"></div>
+</div>
 
-  <script src="script.js"></script>
+<div id="card">Нажми микрофон и скажи что-нибудь</div>
+<button id="micBtn">🎤 Говорить</button>
+
+<script src="script.js"></script>
 </body>
 </html>
